--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,33 +1,135 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>TP1</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+   
+    <link rel="stylesheet" href="cv.css">
+    <!--<script src="main.js"></script>-->
+</head>
+
+<body>
+    <table width="100%" >
+        <tr>
+            <td>ASSANI Imane</td>
+            <td>Célibataire</td>
+        </tr>
+        <tr>
+            <td>Villetaneuse, France</td>
+            <td>Permis B</td>
+        </tr>
+        <tr>
+            <td>06 67 58 43 90</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="mailto:assaniimane@gmail.com">
+                    assaniimane@gmail.com
+                </a>
+            </td>
+            <td></td>
+        </tr>
+    </table>
+
+    <h1 class="cvtitle">Ingénieure d'études et développement</h1>
+
+    <h1>Formations</h1>
+    <table width="100%" >
+        <tr>
+            <td>2020</td>
+            <td>Master 3IR</td>
+            <td>Institut Galilée</td>
+        </tr>
+        <tr>
+            <td>2016-2019</td>
+            <td>Ingénieure d'Etat</td>
+            <td>ENSIAS</td>
+        </tr>
+        <tr>
+            <td>2014-2016</td>
+            <td>CPGE</td>
+            <td>Lycée Mohamed V</td>
+        </tr>
+        <tr>
+            <td>2014</td>
+            <td>Bac Sciences Mathématiques</td>
+            <td>Lycée Berrada</td>
+        </tr>
+    </table>
+
+    <h1>Compétences</h1>
+    <table width="100%" >
+        <tr>
+            <td>Développement</td>
+            <td>C, Java/JavaFX/JEE, Python, Angular, JavaScript/TypeScript, HTML5/CSS3</td>
+        </tr>
+        <tr>
+            <td>SGBD</td>
+            <td>MySQL, Oracle DB, PostgreSQL, Microsoft SQL Server</td>
+        </tr>
+        <tr>
+            <td>BPM</td>
+            <td>Pega,Camunda</td>
+        </tr>
+        <tr>
+            <td>Méthodes</td>
+            <td>Conception(UML2.0, Merise, BPMN), Agile(Scrum)</td>
+        </tr>
+        <tr>
+            <td>Langues</td>
+            <td>Arabe: Langue Maternelle, Anglais/Français: Courant</td>
+        </tr>
+    </table>
+
+    <h1>Expériences</h1>
+    <table width="100%" >
+        <tr>
+            <td>2019</td>
+            <td>Stage de fin d'études</td>
+            <td>
+                <img src="logos/sofrecom.jpg" class="img_size" title="Sofrecom/Orange">
+            </td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Stage de fin de deuxième année</td>
+            <td>
+                <img src="logos/Marsa-Maroc.png" class="img_size" title="Marsa Maroc">
+            </td>
+        </tr>
+        <tr>
+            <td>2017</td>
+            <td>Stage de fin de première année</td>
+            <td>
+                <img src="logos/STMicroelectronics.png" class="img_size" title="ST Microelectronics">
+            </td>
+        </tr>
         
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP1 </h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+    </table>
+
+    <h1>Centre d'intérêts</h1>
+    <table width="100%" >
+        <tr>
+            <td>Culture</td>
+            <td> Peinture sur plusieurs supports, Littérature, Photographie</td>
+        </tr>
+        <tr>
+            <td>Voyage</td>
+            <td>Italie, France, Maroc</td>
+        </tr>
+        <tr>
+            <td>Sports</td>
+            <td>Randonnée, Cyclisme</td>
+        </tr>
+        
+    </table>
+</body>
+
 </html>
