--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-<!--<link rel="stylesheet" href="styles.css">-->
+<link rel="stylesheet" href="cv.css">
 <style>{
     background-color:Tomato;              
     font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
@@ -33,7 +33,7 @@
               <td>Célibataire</td> 
             </tr>
             <tr>
-              <td>93 viltaneuse</td>
+              <td>93 villetaneuse</td>
               <td>93 Romainville</td>
               <td> Permis</td>
 
