--- a/tp1/index.html
+++ b/tp1/index.html
@@ -9,27 +9,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-   
+
     <link rel="stylesheet" href="cv.css">
     <!--<script src="main.js"></script>-->
 </head>
 
 <body>
-    <table width="100%" >
+    <table width="100%">
         <tr>
-            <td>ASSANI Imane</td>
-            <td>Célibataire</td>
+            <td>👩 Imane ASSANI</td>
+            <td>❤️ Célibataire</td>
         </tr>
         <tr>
-            <td>Villetaneuse, France</td>
-            <td>Permis B</td>
+            <td>📍 Villetaneuse, France</td>
+            <td>🚘 Permis B</td>
         </tr>
         <tr>
-            <td>06 67 58 43 90</td>
+            <td>📞 06 67 58 43 90</td>
             <td></td>
         </tr>
         <tr>
-            <td>
+            <td> 📧
                 <a href="mailto:assaniimane@gmail.com">
                     assaniimane@gmail.com
                 </a>
@@ -40,10 +40,15 @@
 
     <h1 class="cvtitle">Ingénieure d'études et développement</h1>
 
-    <h1>Formations</h1>
-    <table width="100%" >
+    <h1>
+        🎓
+        <a href="formations.html">
+            Formations
+        </a>
+    </h1>
+    <table width="100%">
         <tr>
-            <td>2020</td>
+            <td>2020-2021</td>
             <td>Master 3IR</td>
             <td>Institut Galilée</td>
         </tr>
@@ -64,8 +69,8 @@
         </tr>
     </table>
 
-    <h1>Compétences</h1>
-    <table width="100%" >
+    <h1>💻 Compétences</h1>
+    <table width="100%">
         <tr>
             <td>Développement</td>
             <td>C, Java/JavaFX/JEE, Python, Angular, JavaScript/TypeScript, HTML5/CSS3</td>
@@ -88,8 +93,12 @@
         </tr>
     </table>
 
-    <h1>Expériences</h1>
-    <table width="100%" >
+    <h1>👩‍💻
+        <a href="experience.html">
+            Expériences
+        </a>
+    </h1>
+    <table width="100%">
         <tr>
             <td>2019</td>
             <td>Stage de fin d'études</td>
@@ -111,11 +120,11 @@
                 <img src="logos/STMicroelectronics.png" class="img_size" title="ST Microelectronics">
             </td>
         </tr>
-        
+
     </table>
 
-    <h1>Centre d'intérêts</h1>
-    <table width="100%" >
+    <h1>🖌️ Centre d'intérêts</h1>
+    <table width="100%">
         <tr>
             <td>Culture</td>
             <td> Peinture sur plusieurs supports, Littérature, Photographie</td>
@@ -128,7 +137,7 @@
             <td>Sports</td>
             <td>Randonnée, Cyclisme</td>
         </tr>
-        
+
     </table>
 </body>
 
