--- a/tp1/index.html
+++ b/tp1/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <h1 class="titre CV"> Etudiante en Master ingénierie et innovation parcours réseaux informatique </h1>
-    <img class="mon-image" src="../image2.png"
+    <img class="mon-image" src="./image2.png"
    
     <div class="left">
        
