--- a/tp2/index.html
+++ b/tp2/index.html
@@ -1,33 +1,57 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP2</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Formulaire</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="js/main.js"></script>-->
-    </head>
-    <body>        
-        <h1>tp2</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="formulaire.css">
+    <script src="formulaire.js"></script>
+
+</head>
+
+<body>
+    <div class="formBox">
+        <h1 style="text-align: center">Saisie d'une fiche "Personne"</h1>
+        <form id="tpForm" onsubmit="validation()">
+
+            <label for="lastname">Nom</label>
+            <input type="text" id="lastname" name="lastname" placeholder="ex: Smith" minlength="5" maxlength="20"
+                class="person" />
+            <br />
+
+            <label for="firstname">Prénom</label>
+            <input type="text" id="firstname" name="firstname" placeholder="ex: Marie" minlength="5" maxlength="20"
+                class="person" />
+            <br />
+
+            <label for="date">Date de naissance</label>
+            <input type="date" id="date" name="date" placeholder="ex: 01/10/2000" class="person" />
+            <br />
+
+            <label for="address">Adresse</label>
+            <input type="text" id="address" name="address" placeholder="ex: Paris" minlength="5" maxlength="50"
+                class="person" />
+            <br />
+
+            <label for="mail">Mail</label>
+            <input type="email" id="mail" name="mail" placeholder="ex: xxx@mail.com" minlength="5" maxlength="30"
+                class="person" />
+            <br />
+
+            <p>
+                <input type="button" value="Valider" onclick="validation()" class="btn" />
+            </p>
+
+        </form>
+
+        <div id="error"></div>
+        <div id="resultat"></div>
+    </div>
+</body>
+
 </html>
