--- a/tp1/index.html
+++ b/tp1/index.html
@@ -115,7 +115,7 @@
                             <td><i class="fas fa-calendar-alt"></i> Juin 2019 - <span class="green-span">Aout 2019</span></td>
 
                             <td><p class ="gras">Stage Licence 3 : Technicienne SAV Grands Comptes de la cellule escalade </P>
-                            <p class ="tomatos"><img src="OBS.PNG"class="obs"/ width="50px"> Orange ,Bagnolet,Paris  </P></td></td>
+                            <p class ="tomatos"><img src="OBS.PNG"class="obs"width="50px"> Orange ,Bagnolet,Paris  </P></td></td>
                         </tr>
                     </table>
                     <h1> <a href='Compétences.html' class="noir white" target="_blank" title="Cliquez pour consulter mes compétences en détail"><i class="fas fa-gem"></i>  Compétences</a></h1>
