--- a/tp3/index.html
+++ b/tp3/index.html
@@ -21,7 +21,7 @@
 <body style="background-color:rosybrown ;"  >
 
     <div class="container" >
-     <h1 style="color: black;">Formulaire V2</h1>
+     <h1 style="color: black;">Formulaire</h1>
      
       <form id="monFormulaire" method="post" action="#">
        
