--- a/tp4/index.html
+++ b/tp4/index.html
@@ -1,33 +1,184 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP4</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+  <meta charset="UTF-8">
 
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP4</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulaire</title>
+  <!-- jquery pour pouvoir utiliser les composants JS de boostap (modal, tooltip...) -->
+  <script src="js/jquery-3.2.1.slim.min.js"></script>
+
+  <!-- CSS boostrap -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
+  <script src="js/popper.min.js"></script>
+  <script src="js/gps.js"></script>
+  <script src="js/store.js"></script>
+
+  <!-- composants JS de boostrap (modal http://getbootstrap.com/docs/4.0/components/modal/ , collapse...) -->
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/form-jquery-validation.js"></script>
+  <style>
+    .link {
+      width: 200px;
+    }
+
+    @media screen and (max-width: 100px) {}
+  </style>
+
+
+
+</head>
+
+<body style="background-color:white ;">
+
+  <div class="container">
+    <h1 style="color: black; text-align: center;
+    margin-top: 30px;">Formulaire</h1>
+
+    <form id="monFormulaire" method="post" action="#">
+
+
+      <div class="form-row ">
+
+        <label for="nom" class="form-group col-2">Nom</label>
+        <div class="form-group col">
+
+          <input type="text" class="form-control" placeholder="Entrer votre nom" id="nom">
+        </div>
+        <div id="compteur1" class="form-group col-1"> 0 car.
+
+        </div>
+      </div>
+
+      <div class="form-row">
+        <label for="prénom" class="form-group col-2">Prénom</label>
+        <div class="form-group col">
+
+          <input type="text" class="form-control" placeholder="Entrer votre prénom" id="prénom">
+        </div>
+        <div id="compteur2" class="form-group col-1"> 0 car.
+
+        </div>
+      </div>
+      <div class="form-row ">
+
+
+        <label for="date" class="form-group col-2">Date de naissance </label>
+        <div class="form-group col">
+          <input type="date" class="form-control" placeholder="JJ/MM/AAAA" id="date">
+
+
+        </div>
+        <div id="compteur3" class="form-group col-1"> 0 car.
+
+        </div>
+      </div>
+
+
+
+
+
+      <div class="form-group row ">
+        <label for="adresse" class="form-group col-2">Adresse</label>
+        <div class="form-group col">
+          <input type="text" class="form-control" placeholder="25 rue république " id="adresse">
+          <div id="map">
+            <!--  image Google Map à mettre à jour -->
+            <img alt="map" width="300"
+              src="https://maps.googleapis.com/maps/api/staticmap?markers=latitude,longitude&amp;zoom=14&amp;size=400x300&amp;scale=2&amp;key=AIzaSyAkmvI9DazzG9p77IShsz_Di7-5Qn7zkcg">
+
+
+          </div>
+
+        </div>
+        <div class="form-group col-1">
+          <button class="btn btn-warning" type="button" id="gps">📍 GPS</button>
+
+
+        </div>
+        <div id="compteur4" class="form-group col-1"> 0 car.
+        </div>
+
+
+      </div>
+
+
+      <div class="form-row">
+        <label for="mail" class="form-group col-2">Mail</label>
+        <div class="form-group col">
+
+          <input type="mail" class="form-control" placeholder="fffff@ffff" id="mail">
+        </div>
+        <div id="compteur5" class="form-group col-1"> 0 car.
+
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col">
+
+          <input type="button" value="valider" id="valider" class="btn btn-primary ">
+
+        </div>
+      </div>
+
+
+    </form>
+
+  </div>
+
+  <div id="success"></div>
+  <hr>
+  <h4 style="text-align: center; margin-bottom: 20px;">Liste des contacts</h4>
+  <!--table pour réserver le tableau-->
+  <table id="table" class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Date de naissance</th>
+        <th>Adresse</th>
+        <th>Mail</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="liste_des_contacts">
+        <td>MELLAHI</td>
+        <td>Anissa</td>
+        <td>16/12/1994</td>
+        <td>
+          <a href="https://maps.google.com/?q=Paris">Paris</a>
+        </td>
+        <td>
+          <a href="mailto:sarah.ocr@blala.com">anissa.mellahi.prof@gmail.com</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+
+  <div class="modal" tabindex="-1" role="dialog" id="myModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <p>Votre formulaire n'est pas complet </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
