--- a/tp2/index.html
+++ b/tp2/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="formulaire.css">
-    <script src="formulaire.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 
 </head>
 
