--- a/tp3/index.html
+++ b/tp3/index.html
@@ -10,7 +10,8 @@
     <script src="js/popper.min.js"></script>
 
     <script src="js/form-jquery-validation.js"></script>
-  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
