--- a/tp4/index.html
+++ b/tp4/index.html
@@ -2,183 +2,157 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulaire v3</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulaire</title>
-  <!-- jquery pour pouvoir utiliser les composants JS de boostap (modal, tooltip...) -->
-  <script src="js/jquery-3.2.1.slim.min.js"></script>
+    
 
-  <!-- CSS boostrap -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.2.1.slim.min.js"></script>
 
-  <script src="js/popper.min.js"></script>
-  <script src="js/gps.js"></script>
-  <script src="js/store.js"></script>
+    <script src="js/popper.min.js"></script>
 
-  <!-- composants JS de boostrap (modal http://getbootstrap.com/docs/4.0/components/modal/ , collapse...) -->
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/form-jquery-validation.js"></script>
-  <style>
-    .link {
-      width: 200px;
-    }
-
-    @media screen and (max-width: 100px) {}
-  </style>
-
-
-
+    <script src="js/form-jquery-validation.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/gps.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body style="background-color:white ;">
+<body>
+    <div class="container formBox">
 
-  <div class="container">
-    <h1 style="color: black; text-align: center;
-    margin-top: 30px;">Formulaire</h1>
+        <form id="myForm">
+            <h1 class="text-center">TP4 AW - Formulaire</h1>
+            <h5 class="font-italic text-center" style="color: lightpink;">Html5: GPS, Local Storage </h5>
+            <br>
 
-    <form id="monFormulaire" method="post" action="#">
+            <h4>🤵 Ajouter un contact</h4>
+            <br>
+            <div class="row">
 
+                <label for="lastname" class="col-sm-2 col-form-label">Nom</label>
 
-      <div class="form-row ">
+                <div class="col-sm-9">
+                    <input type="text" id="lastname" name="lastname" placeholder="ex: Smith" minlength="5"
+                        maxlength="20" class="form-control person" />
+                </div>
+                <div class="col-sm-1" id="lastnm_counter">
 
-        <label for="nom" class="form-group col-2">Nom</label>
-        <div class="form-group col">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <label for="firstname" class="col-sm-2 col-form-label">Prénom</label>
 
-          <input type="text" class="form-control" placeholder="Entrer votre nom" id="nom">
-        </div>
-        <div id="compteur1" class="form-group col-1"> 0 car.
+                <div class="col-sm-9">
+                    <input type="text" id="firstname" name="firstname" placeholder="ex: Marie" minlength="5"
+                        maxlength="20" class="form-control person" />
+                </div>
+                <div class="col-sm-1" id="firstnm_counter">
 
-        </div>
-      </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <label for="date" class="col-sm-2 col-form-label">Date de naissance</label>
 
-      <div class="form-row">
-        <label for="prénom" class="form-group col-2">Prénom</label>
-        <div class="form-group col">
+                <div class="col-sm-9">
+                    <input type="date" id="date" name="date" placeholder="ex: 01/10/2000" class="form-control person" />
+                </div>
+                <div class="col-sm-1">
+                </div>
+            </div>
 
-          <input type="text" class="form-control" placeholder="Entrer votre prénom" id="prénom">
-        </div>
-        <div id="compteur2" class="form-group col-1"> 0 car.
+            <div class="row">
 
-        </div>
-      </div>
-      <div class="form-row ">
+                <label for="address" class="col-sm-2 col-form-label">Adresse</label>
 
+                <div class="col-sm-9 input-group mb-3">
+                    <input type="text" id="address" name="address" placeholder="ex: Paris" minlength="5" maxlength="50"
+                        class="form-control person" />
 
-        <label for="date" class="form-group col-2">Date de naissance </label>
-        <div class="form-group col">
-          <input type="date" class="form-control" placeholder="JJ/MM/AAAA" id="date">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="gps" onclick="getLocation()">
+                            📍
+                        </button>
+                    </div>
+                </div>
+                <div class="col-sm-1">
 
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2">
 
-        </div>
-        <div id="compteur3" class="form-group col-1"> 0 car.
+                </div>
+                <div class="col-sm-9" id="map">
+                </div>
 
-        </div>
-      </div>
+                <div class="col-sm-1">
 
+                </div>
+            </div>
+            <br>
+            <div class="row">
 
+                <label for="mail" class="col-sm-2 col-form-label">Mail</label>
 
+                <div class="col-sm-9">
+                    <input type="email" id="mail" name="mail" placeholder="ex: xxx@mail.com" minlength="5"
+                        maxlength="30" class="form-control person" />
+                </div>
+                <div class="col-sm-1">
 
-
-      <div class="form-group row ">
-        <label for="adresse" class="form-group col-2">Adresse</label>
-        <div class="form-group col">
-          <input type="text" class="form-control" placeholder="25 rue république " id="adresse">
-          <div id="map">
-            <!--  image Google Map à mettre à jour -->
-            <img alt="map" width="300"
-              src="https://maps.googleapis.com/maps/api/staticmap?markers=latitude,longitude&amp;zoom=14&amp;size=400x300&amp;scale=2&amp;key=AIzaSyAkmvI9DazzG9p77IShsz_Di7-5Qn7zkcg">
-
-
-          </div>
-
-        </div>
-        <div class="form-group col-1">
-          <button class="btn btn-warning" type="button" id="gps">📍 GPS</button>
-
-
-        </div>
-        <div id="compteur4" class="form-group col-1"> 0 car.
-        </div>
-
-
-      </div>
-
-
-      <div class="form-row">
-        <label for="mail" class="form-group col-2">Mail</label>
-        <div class="form-group col">
-
-          <input type="mail" class="form-control" placeholder="fffff@ffff" id="mail">
-        </div>
-        <div id="compteur5" class="form-group col-1"> 0 car.
-
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col">
-
-          <input type="button" value="valider" id="valider" class="btn btn-primary ">
-
-        </div>
-      </div>
+                </div>
+            </div>
+            <br>
+            <br>
 
 
-    </form>
+            <div class="row">
+                <div class="col-sm-9"></div>
+                <div class="col-sm-3">
+                    <button type="submit" class="btn btn-primary" id="subbutton">Valider</button>
+                </div>
+            </div>
 
-  </div>
+        </form>
 
-  <div id="success"></div>
-  <hr>
-  <h4 style="text-align: center; margin-bottom: 20px;">Liste des contacts</h4>
-  <!--table pour réserver le tableau-->
-  <table id="table" class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>Prénom</th>
-        <th>Date de naissance</th>
-        <th>Adresse</th>
-        <th>Mail</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr id="liste_des_contacts">
-        <td>MELLAHI</td>
-        <td>Anissa</td>
-        <td>16/12/1994</td>
-        <td>
-          <a href="https://maps.google.com/?q=Paris">Paris</a>
-        </td>
-        <td>
-          <a href="mailto:sarah.ocr@blala.com">anissa.mellahi.prof@gmail.com</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+        <hr>
+        <h4>📇 Liste des contacts</h4>
+        <br>
+        <table class="table table-striped table-hover" id="tableContacts">
 
 
-  <div class="modal" tabindex="-1" role="dialog" id="myModal">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
 
-          <p>Votre formulaire n'est pas complet </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
+
+        </table>
+
+
+
+        
     </div>
-  </div>
+    <div class="modal" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
