--- a/tp5/index.html
+++ b/tp5/index.html
@@ -18,7 +18,7 @@
     <script src="main.js"></script>
     <script src="js/bootstrap.min.js"></script>
     
-
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/weather-icons.min.css">
