--- a/tp4/index.html
+++ b/tp4/index.html
@@ -26,7 +26,7 @@
     <div class="container formBox">
 
         <form id="myForm">
-            <h1 class="text-center">TP4 AW - Formulaire</h1>
+            <h1 class="text-center">Formulaire</h1>
             <h5 class="font-italic text-center" style="color: lightpink;">Html5: GPS, Local Storage </h5>
             <br>
 
