--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="tp3/index.html">/TP3</a>
         </li>
         <li>
-          <a href="Mon projet/index.html">/TP4</a>
+          <a href="tp4/index.html">/Mon projet</a>
         </li>
         <li>
           <a href="tp5/index.html">/TP5</a>
