--- a/tp5/index.html
+++ b/tp5/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/main.js"></script>
-        <script src="js/libs/vue.js"></script>
+        <script src="js/vue.js"></script>
     
     
     <link rel="stylesheet" href="css/bootstrap.css">
