--- a/tp5/index.html
+++ b/tp5/index.html
@@ -6,7 +6,7 @@
         <title>TP5</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="js/main.js"></script>
+        <script src="main.js"></script>
         <script src="js/vue.js"></script>
     
     
