--- a/tp5/index.html
+++ b/tp5/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>  
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>      
-        <h1>TP5</h1>
+        <h1>Application Web Méteo avec VueJs</h1>
         <div id="weatherApp">
             <!-- formulaire de saisie de ville -->
             <form v-on:submit="addCity">
