--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <li>
           <a href="tp6/index.html">/TP6</a>
         </li>
+          <li>
+          <a href="test/Test.html">/TP7</a>
+        </li>
         <li>
           <a href="tp7/index.html">/TP7</a>
         </li>
