--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <li>
           <a href="tp7/index.html">/TP7</a>
         </li>
+          
+          <li>
+          <a href="Test_Selection.html">/Test_Selection</a>
+        </li>
       </ul>
     </body>
 </html>
