--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </li>
           
           <li>
-          <a href="Test_Selection/Test.html">/Test_Selection</a>
+          <a href="Test_Selection/test.html">/test</a>
         </li>
       </ul>
     </body>
