--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </li>
           
           <li>
-          <a href="Test_Selection/test.html"></a>
+          <a href="Test_Selection/index.html">/Test</a>
         </li>
       </ul>
     </body>
