--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
          
        <li>
-          <a href="Test-selection/index.html">/index</a>
+          <a href="Test-selection/index.html">/TP7</a>
         </li>
          
        </body>    
