--- a/tp1/index.html
+++ b/tp1/index.html
@@ -21,7 +21,7 @@
 <table> 
                         <tr><h1 id="contacteft">Informatios</h1></tr>
                         <tr>
-                            <td  class ="info"> <span>  Anissa MELLAHI</span></td>
+                            <td  class ="info"> <span> Prénom NOM </span></td>
                            
                         </tr>
                         <tr>
@@ -40,7 +40,7 @@
              <tr> <td class ="info"><i class="fas fa-inbox"></i><a href="mailto:anissa.mellahi.pro@gmail.com class= "white tomatos" title="Cliquez pour m'envoyer un mail">anissa.mellahi.pro@gmail.com</a></td>
                             
                         </tr>
-                        <tr><td  class ="info"><a href="https://www.linkedin.com/in/anissa-mellahi-285308159/" target="_blank" title="Cliquez pour consulter mon profil linkdin"><i class="fab fa-linkedin-in"></i> LinkedIn  </a></td></tr>
+                        <tr><td  class ="info"><a href="https://www.linkedin.com/in/xxxxxxxx/" target="_blank" title="Cliquez pour consulter mon profil linkdin"><i class="fab fa-linkedin-in"></i> LinkedIn  </a></td></tr>
                     </div>
                     </table>
                     <h1>A propos de moi</h1>
